--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.27",
+    "multer": "^1.4.2",
     "path": "^0.12.7",
     "randomstring": "^1.1.5"
   },
