--- a/package.json
+++ b/package.json
@@ -21,16 +21,42 @@
   },
   "homepage": "https://github.com/SofiaS1604/vue-mongodb__messenger#readme",
   "dependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
+    "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
+    "clean-webpack-plugin": "^3.0.0",
     "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
+    "css-loader": "^4.2.0",
     "express": "^4.17.1",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "mongoose": "^5.9.27",
     "multer": "^1.4.2",
     "path": "^0.12.7",
-    "randomstring": "^1.1.5"
+    "randomstring": "^1.1.5",
+    "style-loader": "^1.2.1",
+    "stylelint": "^13.6.1",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^3.0.2",
+    "url-loader": "^4.1.0",
+    "vue": "^2.6.11",
+    "vue-loader": "^15.9.3",
+    "vue-styleguidist": "^4.29.1",
+    "vue-template-compiler": "^2.6.11",
+    "vue-touch": "^1.1.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-serve": "^3.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "axios": "^0.19.2",
+    "connect-history-api-fallback": "^1.6.0",
+    "nodemon": "^2.0.4",
+    "vue-router": "^3.4.0"
   }
 }
