--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "css-loader": "^4.2.0",
     "express": "^4.17.1",
     "file-loader": "^6.0.0",
+    "fs": "0.0.1-security",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "mongoose": "^5.9.27",
