--- a/package.json
+++ b/package.json
@@ -31,12 +31,10 @@
     "css-loader": "^4.2.0",
     "express": "^4.17.1",
     "file-loader": "^6.0.0",
-    "fs": "0.0.1-security",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "mongoose": "^5.9.27",
     "multer": "^1.4.2",
-    "path": "^0.12.7",
     "randomstring": "^1.1.5",
     "style-loader": "^1.2.1",
     "stylelint": "^13.6.1",
@@ -47,7 +45,7 @@
     "vue-loader": "^15.9.3",
     "vue-styleguidist": "^4.29.1",
     "vue-template-compiler": "^2.6.11",
-    "vue-touch": "^1.1.0",
+    "vue-touch": "^2.0.0-beta.4",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.7.2",
